manifests/namespace.yaml
---

apiVersion: v1
kind: Namespace
metadata:
  name: :env:
  labels:
    app: cov-clear
    environment: :env:
