manifests/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: [[env]]
  labels:
    app: backend
    environment: [[env]]
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
spec:
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  selector:
    app: backend
