manifests/ingress.yaml
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cov-clear
  namespace: [[env]]
  labels:
    app: cov-clear
    environment: [[env]]
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /api/v1/health
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/load-balancer-attributes: deletion_protection.enabled=true
    alb.ingress.kubernetes.io/target-group-attributes: load_balancing.algorithm.type=least_outstanding_requests
spec:
  rules:
    - host: [[domain]]
      http:
        paths:
          - path: /api/*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /api/*
            backend:
              serviceName: backend
              servicePort: 80
          - path: /*
            backend:
              serviceName: frontend
              servicePort: 80
